fixing more english mistakes and h2 letter-spacing

--- a/src/layouts/common.scss
+++ b/src/layouts/common.scss
@@ -61,7 +61,7 @@ h3 {
 
 h3 {
   color: $white;
-  letter-spacing: .53px;
+  letter-spacing: 2px;
   font-size: 30px;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
