--- a/src/pages/sponsorship.scss
+++ b/src/pages/sponsorship.scss
@@ -20,7 +20,6 @@
     > section {
       h3, h2 {
         padding-left: 0;
-        margin-left: 0;
       }
     }
   }
